spade-tests/src/snapshots/spade_tests__ast_lowering__negative_reg_counts_are_disallowed.snap
---
source: spade-tests/src/ast_lowering.rs
---
pipeline(0) x(clk: clock) -> bool {
    reg*-10;
        true
}


error: Pipeline depth mismatch. Expected -10 got 0
  ┌─ testinput:1:10
  │
1 │ pipeline(0) x(clk: clock) -> bool {
  │          ^ Found -10 stages
  │
  = note: Expected: -10
               Got: 0
